--- a/kadai_022.html
+++ b/kadai_022.html
@@ -4,7 +4,7 @@
     <title>22章課題</title>
     <meta name="description" content="このページは22章の課題です。">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylee.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
